--- a/oops_practice.ipynb
+++ b/oops_practice.ipynb
@@ -255,8 +255,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "014cfa70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Determine if School_bus is also an instance of the Vehicle class\n",
+    "# print(isinstance(school_bus,vehicle))\n",
+    "\n",
+    "class Vehicle:\n",
+    "    def __init__(self,name,max_speed,mileage):\n",
+    "        self.name = name\n",
+    "        self.max_speed = max_speed\n",
+    "        self.mileage = mileage\n",
+    "        \n",
+    "school_bus = Vehicle('School Bus',180,14)\n",
+    "print(isinstance(school_bus,Vehicle))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "80c33569",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person name:  Amey Lonkar\n",
+      "Person age: 21\n",
+      "-----------------------------\n",
+      "Student name: Amey Lonkar\n",
+      "Student age:  21\n",
+      "Student section:  Mathematics\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Python class Person with attributes: name and age of type string.\n",
+    "# Create a display() method that displays the name and age of an object created via the Person class.\n",
+    "# Create a child class Student  which inherits from the Person class and which also has a section attribute.\n",
+    "# Create a method displayStudent() that displays the name, age and section of an object created via the Student class.\n",
+    "# Create a student object via an instantiation on the Student class and then test the displayStudent method.\n",
+    "\n",
+    "\n",
+    "class person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('Person name: ',self.name)\n",
+    "        print('Person age:', self.age)\n",
+    "        \n",
+    "class student(person):\n",
+    "    def __init__(self,name,age,section):\n",
+    "        person. __init__ (self,name,age)\n",
+    "        self.section = section\n",
+    "        \n",
+    "    def displayStudent(self):\n",
+    "        print('Student name:', self.name)\n",
+    "        print('Student age: ',self.age)\n",
+    "        print('Student section: ',self.section)\n",
+    "        \n",
+    "        \n",
+    "x = person('Amey Lonkar',21)\n",
+    "x.display()\n",
+    "print('-----------------------------')\n",
+    "y=student('Amey Lonkar',21, 'Mathematics')\n",
+    "y.displayStudent()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "34dfe7b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Impossible Operation!  Insufficient Balance !\n",
+      "Account Number: 12345678910234\n",
+      "Account Holder Name:  Amey Lonkar\n",
+      "Account Balance: Rs. 4700\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a Python class called BankAccount which represents a bank account, having as \n",
+    "# attributes: accountNumber (numeric type), name (name of the account owner as string type), balance.\n",
+    "#Create a constructor with parameters: accountNumber, name, balance.\n",
+    "#Create a Deposit() method which manages the deposit actions.\n",
+    "#Create a Withdrawal() method  which manages withdrawals actions.\n",
+    "#Create an bankFees() method to apply the bank fees with a percentage of 5% of the balance account.(b=5/100)*total_balance\n",
+    "#Create a display() method to display account details.\n",
+    "#Give the complete code for the  BankAccount class.\n",
+    "\n",
+    "\n",
+    "class BankAccount:\n",
+    "    def __init__ (self,accountNumber,name,balance):\n",
+    "        self.accountNumber=accountNumber\n",
+    "        self.name=name\n",
+    "        self.balance=balance\n",
+    "        \n",
+    "    def Deposit(self,d):\n",
+    "        self.balance=self.balance+d\n",
+    "    \n",
+    "    def Withdrawal(self,w):\n",
+    "        if (self.balance<w):\n",
+    "            print('Impossible Operation!  Insufficient Balance !')\n",
+    "        else:\n",
+    "            self.balance=self.balance-w\n",
+    "    def bankFees(self):\n",
+    "        self.balance=(5/100)*self.balance\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('Account Number:',self.accountNumber)\n",
+    "        print('Account Holder Name: ',self.name)\n",
+    "        print('Account Balance:','Rs.',self.balance)\n",
+    "        \n",
+    "        \n",
+    "newAccount=BankAccount(12345678910234,'Amey Lonkar', 4700)\n",
+    "newAccount.Withdrawal(5000)\n",
+    "#newAccount.Deposit(3000)\n",
+    "\n",
+    "newAccount.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "91b8c3b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Amey\n",
+      "Age: 21\n",
+      "Contact: 123456798\n",
+      "------------------\n",
+      "Name: Amey\n",
+      "Age: 21\n",
+      "Contact: 9934234212\n",
+      "Section: A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Python class Person with attributes: name and age and contact number of type string.\n",
+    "# Create a display() method that displays the name and age and contact number of an object created via the Person class.\n",
+    "# Create a child class Student  which inherits from the Person class and which also has a section and contact attribute.\n",
+    "# Create a method displayStudent() that displays the name, age and section and contact of an object created via the \n",
+    "# Student class.\n",
+    "# Create a student object via an instantiation on the Student class and then test the displayStudent method.\n",
+    "class Person:\n",
+    "    def __init__(self,name,age,contact):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.contact = contact\n",
+    "    def display(self):\n",
+    "        print('Name:',self.name)\n",
+    "        print('Age:',self.age)\n",
+    "        print('Contact:',self.contact)\n",
+    "class Student(Person):\n",
+    "    def __init__(self,name,age,contact,section):\n",
+    "        Person.__init__(self,name,age,contact)\n",
+    "        self.section = section\n",
+    "    def DisplayStudent(self):\n",
+    "        print('Name:',self.name)\n",
+    "        print('Age:',self.age)\n",
+    "        print('Contact:',self.contact)\n",
+    "        print('Section:',self.section)\n",
+    "obj1 = Person('Amey',21,123456798)\n",
+    "obj1.display()\n",
+    "print('------------------')\n",
+    "obj2 = Student('Amey',21,9934234212,'A')\n",
+    "obj2.DisplayStudent()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5800f276",
    "metadata": {},
    "outputs": [],
    "source": []
