--- a/15. Lambda Functions.ipynb
+++ b/15. Lambda Functions.ipynb
@@ -172,6 +172,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "926d4984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the volume of cube with lambda function.\n",
+    "(lambda a:a*a*a)(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "9abe70eb",
    "metadata": {},
@@ -197,10 +219,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "944d4937",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age: 16\n",
+      "The entered age is 16\n",
+      "You are not elegible for voting.\n"
+     ]
+    }
+   ],
    "source": [
     "# Lambda function with if/else\n",
     "\n",
@@ -286,8 +318,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8a67682b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Amey', 'Shardul', 'Gambhir', 'Rana', 'Rinku', 'Kholi', 'Delhi', 'Meyers', 'LSG', 'RCB']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10 string name new_variable in list with lambda function.\n",
+    "new_variable = []\n",
+    "\n",
+    "new_variable.append((lambda x:x)('Amey'))\n",
+    "new_variable.append((lambda x:x)('Shardul'))\n",
+    "new_variable.append((lambda x:x)('Gambhir'))\n",
+    "new_variable.append((lambda x:x)('Rana'))\n",
+    "new_variable.append((lambda x:x)('Rinku'))\n",
+    "new_variable.append((lambda x:x)('Kholi'))\n",
+    "new_variable.append((lambda x:x)('Delhi'))\n",
+    "new_variable.append((lambda x:x)('Meyers'))\n",
+    "new_variable.append((lambda x:x)('LSG'))\n",
+    "new_variable.append((lambda x:x)('RCB'))\n",
+    "print(new_variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d5449c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a lambda function with formula of area_Rectangle?\n",
+    "# find the area of circle with lambda function and radius is entered by the user.\n",
+    "# find the area of square with lambda function and are is entered by the user.\n",
+    "# find the perimeter of square with lambda function and perimeter is entered by the user.\n",
+    "# find the perimeter of rectangle with lambda function and perimeter is entered by the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af66cb83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "11894cae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the length:2\n",
+      "Enter the breadth:3\n",
+      "area of Rectangle 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "l = int(input('Enter the length:'))\n",
+    "b = int(input('Enter the breadth:'))\n",
+    "print('area of Rectangle',(lambda area:l*b)(area))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "57f36b35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the length:2\n",
+      "Enter the breadth:3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = int(input('Enter the length:'))\n",
+    "b = int(input('Enter the breadth:'))\n",
+    "area = 0\n",
+    "(lambda area:l*b)(area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2a1dee61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your radius6\n",
+      "The area of circle: 113.03999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius=int(input('Enter your radius'))\n",
+    "print('The area of circle:',(lambda area:3.14*radius*radius)(area))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c6b38edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your radius6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "113.09733552923255"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Area of a circle \n",
+    "import math\n",
+    "radius = int(input('Enter your radius'))\n",
+    "(lambda area:math.pi*radius*radius)(area)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "311e81bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the side of a square6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Area of Square\n",
+    "side = int(input('Enter the side of a square'))\n",
+    "(lambda area:side*side)(area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b09d4226",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your side 4\n",
+      "The perimeter of Square is 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "perimeter=0\n",
+    "side = int(input('Enter your side '))\n",
+    "print('The perimeter of Square is:',(lambda perimeter:4*side)(perimeter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1a38afd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your length 2\n",
+      "Enter your width 3\n",
+      "The perimeter of rectangle is: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "perimeter=0\n",
+    "length=int(input('Enter your length '))\n",
+    "width=int(input('Enter your width '))\n",
+    "print('The perimeter of rectangle is:',(lambda perimeter:2*length+2*width)(perimeter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99ba17bd",
    "metadata": {},
    "outputs": [],
    "source": []
