--- a/16. Arrays in Python.ipynb
+++ b/16. Arrays in Python.ipynb
@@ -718,9 +718,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c9dad39",
+   "metadata": {},
+   "source": [
+    "# Concatenation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0edf630f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The new array called special_fibonacci_nums: array('d', [0.577, 1.618, 2.718, 3.147, 6.0, 37.0, 1729.0, 1.0, 1.0, 2.0, 3.0, 5.0, 8.0, 13.0, 21.0, 34.0]).\n"
+     ]
+    }
+   ],
+   "source": [
+    "import array as arr\n",
+    "from array import *\n",
+    "special_nums=arr.array('d',[0.577,1.618,2.718,3.147,6,37,1729])\n",
+    "special_fibonacci= arr.array('d',[1,1,2,3,5,8,13,21,34])\n",
+    "\n",
+    "special_fibonacci_nums=special_nums+special_fibonacci\n",
+    "print(f'The new array called special_fibonacci_nums: {special_fibonacci_nums}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec8a6679",
+   "metadata": {},
+   "source": [
+    "# Creating ID array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5c26df83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1995226552256"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multi = 10\n",
+    "one_array=[1]*multi\n",
+    "print(one_array)\n",
+    "id(one_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0318a0b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "multi = 20\n",
+    "nums_array= [i for i in range(multi)]\n",
+    "print(nums_array)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03fdc8f",
+   "id": "1b840965",
    "metadata": {},
    "outputs": [],
    "source": []
