--- a/16. Arrays in Python.ipynb
+++ b/16. Arrays in Python.ipynb
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0edf630f",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
    ],
    "source": [
     "import array as arr\n",
-    "from array import *\n",
+    "from array import *   # * (everything)\n",
     "special_nums=arr.array('d',[0.577,1.618,2.718,3.147,6,37,1729])\n",
     "special_fibonacci= arr.array('d',[1,1,2,3,5,8,13,21,34])\n",
     "\n",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5c26df83",
    "metadata": {},
    "outputs": [
@@ -767,23 +767,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+      "[5, 5, 5, 5, 5, 5, 5, 5, 5, 5]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1995226552256"
+       "2196987766656"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "multi = 10\n",
-    "one_array=[1]*multi\n",
+    "one_array=[5]*multi\n",
     "print(one_array)\n",
     "id(one_array)"
    ]
@@ -810,8 +810,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1b840965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "multi = 100\n",
+    "array_one = [i for i in range(multi)]\n",
+    "print(array_one)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad81328",
+   "metadata": {},
+   "source": [
+    "# Addition with the functions insert() and append()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4b8030da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before any addition inot fibonacci numbers\n",
+      "123158132134\n",
+      "After an element addition into fibonacci numbers\n",
+      "12315813213455\n",
+      "After an element addition inot fibonacci numbers\n",
+      "1231581321345589\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the function 'insert()'\n",
+    "fibonacci_nums=arr.array('i',[1,2,3,1,5,8,13,21,34])\n",
+    "print('Before any addition inot fibonacci numbers')\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After an element addition into fibonacci numbers')\n",
+    "added_nums=fibonacci_nums[-1]+fibonacci_nums[-2]\n",
+    "fibonacci_nums.insert(9,added_nums)\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After an element addition inot fibonacci numbers')\n",
+    "added_nums=fibonacci_nums[-1]+fibonacci_nums[-2]\n",
+    "fibonacci_nums.insert(10,added_nums)\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a81478f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before any addition into fibonacci numbers\n",
+      "112358132134\n",
+      "After an element adiition into fibonacci numbers\n",
+      "11235813213455\n",
+      "After an element adiition into fibonacci numbers\n",
+      "1123581321345589\n",
+      "After an element adiition into fibonacci numbers\n",
+      "1123581321345589144\n",
+      "After an element adiition into fibonacci numbers\n",
+      "1123581321345589144233\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using the function 'append()'\n",
+    "fibonacci_nums=arr.array('i',[1,1,2,3,5,8,13,21,34])\n",
+    "print('Before any addition into fibonacci numbers')\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After an element adiition into fibonacci numbers')\n",
+    "added_num=fibonacci_nums[-1]+fibonacci_nums[-2]\n",
+    "fibonacci_nums.append(added_num)\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After an element adiition into fibonacci numbers')\n",
+    "added_num=fibonacci_nums[-1]+fibonacci_nums[-2]\n",
+    "fibonacci_nums.append(added_num)\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After an element adiition into fibonacci numbers')\n",
+    "added_num=fibonacci_nums[-1]+fibonacci_nums[-2]\n",
+    "fibonacci_nums.append(added_num)\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After an element adiition into fibonacci numbers')\n",
+    "added_num=fibonacci_nums[-1]+fibonacci_nums[-2]\n",
+    "fibonacci_nums.append(added_num)\n",
+    "for i in fibonacci_nums:\n",
+    "    print(i,end='')\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a5e5828",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b77ba3b3",
    "metadata": {},
    "outputs": [],
    "source": []
