--- a/16. Arrays in Python.ipynb
+++ b/16. Arrays in Python.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a5df36d2",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c40bb63a",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bdecbbcc",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "1854f2e9",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "cbb2ab37",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "541b2b72",
    "metadata": {},
    "outputs": [
@@ -675,8 +675,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array('i', [1, 2, 3, 5, 8, 13, 21, 34])\n",
-      "array('i', [1, 8, 13, 21, 34])\n"
+      "array('i', [1, 1, 2, 3, 5, 8, 13, 21, 34])\n",
+      "array('i', [1, 5, 8, 13, 21, 34])\n"
      ]
     }
    ],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "8e2bebb8",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The length of the array is 5\n"
+      "The length of the array is 6\n"
      ]
     }
    ],
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "0edf630f",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "5c26df83",
    "metadata": {},
    "outputs": [
@@ -773,10 +773,10 @@
     {
      "data": {
       "text/plain": [
-       "2196987766656"
+       "2018881582080"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0318a0b6",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "1b840965",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "4b8030da",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "a81478f1",
    "metadata": {},
    "outputs": [
@@ -933,17 +933,244 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a5e5828",
+   "cell_type": "markdown",
+   "id": "27dd361d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#  Removing with the function remove() and pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b77ba3b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before removing an element from the array\n",
+      "0.5771.6182.7183.146.037.01729.0\n",
+      "After removing an element from the array\n",
+      "1.618-2.718-3.14-6.0-37.0-1729.0-\n",
+      "After removing an element from the array\n",
+      "2.718-3.14-6.0-37.0-1729.0-\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the function 'remove()'\n",
+    "special_nums=arr.array('d',[0.577,1.618,2.718,3.14,6,37,1729])\n",
+    "print('Before removing an element from the array')\n",
+    "for i in special_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After removing an element from the array')\n",
+    "special_nums.remove(0.577)  # We can make this using items.\n",
+    "for i in special_nums:\n",
+    "    print(i,end='-')\n",
+    "print()\n",
+    "print('After removing an element from the array')\n",
+    "special_nums.remove(special_nums[0])  # We can make this using indexing.\n",
+    "for i in special_nums:\n",
+    "    print(i,end='-')\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e1e516da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before removing an element from the array\n",
+      "0.5771.6182.7183.146.037.01729.0\n",
+      "After removing an element from the array\n",
+      "0.577,1.618,2.718,3.14,6.0,37.0,\n",
+      "After removing an element from the array\n",
+      "0.577,1.618,2.718,3.14,6.0,\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using the function \"pop()\"\n",
+    "special_nums=arr.array('d',[0.577,1.618,2.718,3.14,6,37,1729])\n",
+    "print('Before removing an element from the array')\n",
+    "for i in special_nums:\n",
+    "    print(i,end='')\n",
+    "print()\n",
+    "print('After removing an element from the array')\n",
+    "special_nums.pop()  # We can make this using pop,Bydefault it pop item by backward.\n",
+    "for i in special_nums:\n",
+    "    print(i,end=',')\n",
+    "print()\n",
+    "print('After removing an element from the array')\n",
+    "special_nums.pop()  \n",
+    "for i in special_nums:\n",
+    "    print(i,end=',')\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d82dd23",
+   "metadata": {},
+   "source": [
+    "# Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "75d35a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('d', [1.618, 2.718, 3.14, 6.0, 37.0])\n",
+      "1.618,2.718,3.14,6.0,37.0,"
+     ]
+    }
+   ],
+   "source": [
+    "special_nums=arr.array('d',[0.577,1.618,2.718,3.14,6,37,1729])\n",
+    "sliced_special_nums=special_nums[1:6]\n",
+    "print(sliced_special_nums)\n",
+    "\n",
+    "\n",
+    "# other method\n",
+    "for i in sliced_special_nums:\n",
+    "    print(i,end=',')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "87e39278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('d', [1729.0, 37.0, 6.0, 3.14, 2.718, 1.618, 0.577])\n"
+     ]
+    }
+   ],
+   "source": [
+    "special_nums=arr.array('d',[0.577,1.618,2.718,3.14,6,37,1729])\n",
+    "reverse_array = special_nums[::-1]\n",
+    "print(reverse_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3da4000d",
+   "metadata": {},
+   "source": [
+    "# Searching "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9b6ca0a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The searched items number 1729 is present at index 6.\n",
+      "The searched item number 1729 is present at index 6.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To make a search in an arry, use the function index()\n",
+    "special_nums=arr.array('d',[0.577,1.618,2.718,3.14,6,37,1729])\n",
+    "searched_item=special_nums.index(1729)\n",
+    "print(f'The searched items number 1729 is present at index {searched_item}.')\n",
+    "# Printing with format\n",
+    "\n",
+    "print('The searched item number {} is present at index {}.'.format(1729,searched_item))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "886f9514",
+   "metadata": {},
+   "source": [
+    "# copying\n",
+    "\n",
+    " * Copying using assignment\n",
+    " * This process gives the same ID number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b7b402e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('d', [0.577, 1.618, 2.718, 3.14, 6.0, 37.0, 1729.0]) With the ID number 2018918822896\n",
+      "array('d', [0.577, 1.618, 2.718, 3.14, 6.0, 37.0, 1729.0]) With the ID number 2018918822896\n"
+     ]
+    }
+   ],
+   "source": [
+    "special_nums=arr.array('d',[0.577,1.618,2.718,3.14,6,37,1729])\n",
+    "copied_special_nums=special_nums\n",
+    "print(special_nums,'With the ID number',id(special_nums))\n",
+    "print(copied_special_nums,'With the ID number',id(copied_special_nums))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "80cff9ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.577,1.618,2.718,3.14,6.0,37.0,1729.0,\n",
+      "The ID number of the array special_nums is 2018918822896\n",
+      "0.577,1.618,2.718,3.14,6.0,37.0,1729.0,\n",
+      "The ID number of the array copied_speical_nums 2018918822896\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Other method with for loop\n",
+    "\n",
+    "for i in special_nums:\n",
+    "    print(i,end=',')\n",
+    "print()\n",
+    "print(f'The ID number of the array special_nums is {id(special_nums)}')\n",
+    "for i in copied_special_nums:\n",
+    "    print(i,end=',')\n",
+    "print()\n",
+    "print(f'The ID number of the array copied_speical_nums {id(copied_special_nums)}')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77ba3b3",
+   "id": "7a7178cd",
    "metadata": {},
    "outputs": [],
    "source": []
