--- a/17. Math Module Functions in Python.ipynb
+++ b/17. Math Module Functions in Python.ipynb
@@ -576,9 +576,262 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "590ba387",
+   "metadata": {},
+   "source": [
+    "# comb() functions\n",
+    "\n",
+    " * Number of ways to choose k items form n items without repetition and without order.\n",
+    " * Evaluates to n!/(k!*(n-k)!) When k<=n and evaluates to zero when k>n.\n",
+    " * Also called the binomial cofficient because it is equivalent to the coefiicient of k-th term in polynomial expansion of the expression (1+x)**n.\n",
+    " * Raises TypeError if either of the arguments are not integers.\n",
+    " * Raises ValueError if either  of the arguments negative."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "07bc99d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The combination of 6 with 2 is 15\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(f'The combination of 6 with 2 is {math.comb(6,2)}')\n",
+    "print(math.comb(10,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d57835b",
+   "metadata": {},
+   "source": [
+    "# Copysign() function\n",
+    "\n",
+    " * Returns a float consiting of the value of the first parameter and the second parameter. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2274a07e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The copysign of these two numbers -3.14 and 2.718 is 3.14\n",
+      "The copysign of these two numbers 1729 and 0.577 is -1729.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The copysign of these two numbers -3.14 and 2.718 is {math.copysign (-3.14,2.718)}')\n",
+    "print(f'The copysign of these two numbers 1729 and 0.577 is {math.copysign( 1729,-0.577)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a22bde04",
+   "metadata": {},
+   "source": [
+    "# cos() functions \n",
+    " Return the cosine of x(measured in radians)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "438acd40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "0.8660254037844387\n",
+      "0.5403023058681398\n",
+      "0.5403023058681398\n",
+      "0.43204202084333315\n",
+      "-0.4480736161291701\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.cos(0))\n",
+    "print(math.cos(math.pi/6))\n",
+    "print(math.cos(-1))\n",
+    "print(math.cos(1))\n",
+    "print(math.cos(1729))\n",
+    "print(math.cos(90))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f407cca",
+   "metadata": {},
+   "source": [
+    "# factorial() function.\n",
+    "\n",
+    " * Returns the factorial of a number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1f0c19ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of number 6 is:720\n",
+      "The factorial of the number 3 is: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The factorial of number 6 is:{math.factorial(6)}')\n",
+    "print(f'The factorial of the number 3 is: {math.factorial(4)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38a14117",
+   "metadata": {},
+   "source": [
+    "# floor() functions:\n",
+    "\n",
+    " * Rounds a number down to the nearest integer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b9345012",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.floor(3.50))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cadbbb7c",
+   "metadata": {},
+   "source": [
+    "# fmod() function\n",
+    " * It Returns the remainder of x/y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d60e427d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.fmod(37,6))\n",
+    "print(math.fmod(4,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "534a4c7d",
+   "metadata": {},
+   "source": [
+    "# gcd() function \n",
+    " * Returns the greatest comman divisor of two integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3a97640b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.gcd(3,10))\n",
+    "print(math.gcd(4,8))\n",
+    "print(math.gcd(0,0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2c05d3a",
+   "metadata": {},
+   "source": [
+    "# isqrt() funciton\n",
+    " * Rounds a square root number downwards to the nearset integer.\n",
+    " * The returned square root value is the floor value of square root of a non-negative integer numbers.\n",
+    " * It gives a ValueError and TypeError when a negative integer number and a float number are used respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "473e711e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "13\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.isqrt(144))\n",
+    "print(math.isqrt(169))\n",
+    "print(math.isqrt(256))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e656cd",
+   "id": "562df32c",
    "metadata": {},
    "outputs": [],
    "source": []
