--- a/18. Decorators in Python.ipynb
+++ b/18. Decorators in Python.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "ac082820",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "04765f70",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "f6d4819f",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "95dcede0",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "9.8596"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,9 +158,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b90e476e",
+   "metadata": {},
+   "source": [
+    "# Nested/Inner Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a0a76b44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is a programming language.\n",
+      "Hello World\n",
+      "Hi,World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a function\n",
+    "\n",
+    "'''\n",
+    "In the following function, it is nonsignificant how the child functions are announced.\n",
+    "The implementation of the child function does influence on the output.\n",
+    "These child functions are topically linked with the function mytex(), therefore they can not be \n",
+    "called Individually.\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "def mytext():\n",
+    "    print('Python is a programming language.')\n",
+    "    def new_text():\n",
+    "        print('Hello World')\n",
+    "    def message():\n",
+    "        print('Hi,World')\n",
+    "    \n",
+    "    new_text()\n",
+    "    message()\n",
+    "mytext()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8ae9cbae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is a programming language.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a function\n",
+    "\n",
+    "\"\"\"\n",
+    "In the following example, the function text() is nested into function message().\n",
+    "It will return each time when the function text() is called.\n",
+    "\"\"\"\n",
+    "def message():\n",
+    "    def text():\n",
+    "        print('Python is a programming language.')\n",
+    "    return text\n",
+    "\n",
+    "new_message=message()\n",
+    "new_message()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c9ad0683",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the exponent using nested function.\n",
+    "def function(num):\n",
+    "    def exponent(num):\n",
+    "        return num * num\n",
+    "    \n",
+    "    #output = exponent(num)\n",
+    "    return exponent\n",
+    "x = exponent(2)\n",
+    "print(x(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "78848cd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is the most popular language.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def msg(text):\n",
+    "    'Hello World'\n",
+    "    def mail():\n",
+    "        'Hi, Python'\n",
+    "        print(text)\n",
+    "    mail()\n",
+    "    \n",
+    "msg('Python is the most popular language.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3d4c3a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.28\n",
+      "1.2738853503184713\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a function.\n",
+    "\n",
+    "\"\"\"\n",
+    "In this function, the multi() and divide() functions as an argument in operator() functions are \n",
+    "passed.\n",
+    "\"\"\"\n",
+    "def multi(x):\n",
+    "    return x*3.14\n",
+    "def divide(x):\n",
+    "    return x/3.14\n",
+    "def operator(function,x):\n",
+    "    number=function(x)\n",
+    "    return number\n",
+    "\n",
+    "print(operator(multi,2))\n",
+    "print(operator(divide,4))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5efc2ed",
+   "id": "823591f4",
    "metadata": {},
    "outputs": [],
    "source": []
